
Package: PSCBS
==============

Version: 0.13.1 [2011-09-02]
o Added nbrOfLoci(), getChromosomes() and getSampleNames() for CBS.
o Added nbrOfSegments(), nbrOfLoci(), nbrOfSamples(), getSampleNames()
  and getChromosomes() for DNAcopy.


Version: 0.13.0 [2011-09-01]
o GENERALIZATION: Now segmentByCBS() can process multiple chromosomes.
o BUG FIX: Internal methods plotTracksManyChromosomes() and
  tileChromosomes() for CBS did not work at all and therefore
  neither plotTracks() for CBS with more than one chromosome.
o Added append() for CBS objects.


Version: 0.12.2 [2011-08-27]
o CLEANUP: Now R CMD check is no longer giving a note that the
  package loads package 'DNAcopy' in .onAttach().


Version: 0.12.1 [2011-08-08]
o BUG FIX: If dropSegmentationOutliers() would drop an outlier next to
  a change point, such that the total copy-number signal becomes NA,
  then the sanity checks that TCN segments always overlaps DH segments
  would fail.  Now the sanity checks are aware of this special case.
  These sanity checks were moved from bootstrapTCNandDHByRegion() to
  segmentByPairedPSCBS().  Thanks Christine To at University of Toronto
  for reporting on this.


Version: 0.12.0 [2011-07-23]
o Added a namespace to the package, which will be more or less
  a requirement in the next major release of R.
o BUG FIX: Recently R devel automatically adds a namespace to
  a package, if missing.  This caused some of the PSCBS examples
  to throw an exception related to incorrect dispatching of cat().


Version: 0.11.7 [2011-07-15]
o DOCUMENTATION: Added a section to help("segmentByPairedPSCBS") on
  the importance of doing a whole-genome PSCBS segmentations if 
  calling AB and LOH states afterward.
o DOCUMENTATION: Made it more clear in help("segmentByPairedPSCBS")
  that arguments 'betaT', 'betaN' and 'muN' may contain NAs for 
  non-polymorphic loci.


Version: 0.11.6 [2011-07-14]
o BUG FIX/ROBUSTNESS: In some cases, the segmentation table would 